# python_extensions

./: .gitignore  README.md  environment.yaml  index.ipynb
cppyy/: README.md  mandelbrot.py
ctypes_extension/: CMakeLists.txt  README.md  mandelbrot.c  mandelbrot.py
jit_compiled_numba/: mandelbrot.py
numpy_vectorization/: mandelbrot.py
pure_python/: mandelbrot.py
pybind11_extension/: CMakeLists.txt  README.md  mandelbrot.cpp  mandelbrot.py
